chgmgmt_build/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>ogg__ActivityStatus__c</fullName>
        <description>活動状況を表します。0：未着手、1：作業中、2：完了</description>
        <formula>IF ( AND (ISNULL(ogg__StartTime__c), ISNULL(ogg__FinishTime__c)), 0,
  IF ( AND (NOT(ISNULL(ogg__StartTime__c)), ISNULL(ogg__FinishTime__c)), 1, 2)
)</formula>
        <label>ステータス</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ogg__FinishLatitude__c</fullName>
        <description>UPWARDが利用する、活動を終了した時点の緯度です。</description>
        <inlineHelpText>UPWARDが利用する、活動を終了した時点の緯度です。</inlineHelpText>
        <label>活動終了緯度</label>
        <precision>13</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ogg__FinishLongitude__c</fullName>
        <description>UPWARDが利用する、活動を終了した時点の経度です。</description>
        <inlineHelpText>UPWARDが利用する、活動を終了した時点の経度です。</inlineHelpText>
        <label>活動終了経度</label>
        <precision>13</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ogg__FinishTime__c</fullName>
        <description>UPWARD mobileから記録する活動終了日時です。</description>
        <label>活動終了日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ogg__StartLatitude__c</fullName>
        <description>UPWARDが利用する、活動を開始した時点の緯度です。</description>
        <inlineHelpText>UPWARDが利用する、活動を開始した時点の緯度です。</inlineHelpText>
        <label>活動開始緯度</label>
        <precision>13</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ogg__StartLongitude__c</fullName>
        <description>UPWARDが利用する、活動を開始した時点の経度です。</description>
        <inlineHelpText>UPWARDが利用する、活動を開始した時点の経度です。</inlineHelpText>
        <label>活動開始経度</label>
        <precision>13</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ogg__StartTime__c</fullName>
        <description>UPWARD mobileから記録された活動開始日時です。</description>
        <label>活動開始日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ogg__WorkLatitude__c</fullName>
        <description>行動の実施場所緯度</description>
        <label>実施場所（緯度）</label>
        <precision>14</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ogg__WorkLongitude__c</fullName>
        <description>行動の実施場所（経度）</description>
        <label>実施場所（経度）</label>
        <precision>14</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>